[gd_scene load_steps=5 format=3 uid="uid://cphd0ys0gei33"]

[ext_resource type="Script" path="res://player/ik_armature.gd" id="1_2w3nb"]
[ext_resource type="Texture2D" uid="uid://8bou8p1g8qsa" path="res://assets/icons/items.tres" id="2_2dsj4"]

[sub_resource type="Curve" id="Curve_ewfjf"]
_data = [Vector2(0, 0.9), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.8), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_jdtki"]
_data = [Vector2(0, 0.8), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.7), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2w3nb")

[node name="arm" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="r_bicep" type="Line2D" parent="arm"]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, 0, 0)
width_curve = SubResource("Curve_ewfjf")
begin_cap_mode = 2
end_cap_mode = 2

[node name="r_forearm" type="Line2D" parent="arm"]
unique_name_in_owner = true
points = PackedVector2Array(0, 0, 0, 0)
width = 5.0
width_curve = SubResource("Curve_jdtki")
begin_cap_mode = 2
end_cap_mode = 2

[node name="r_shoulder" type="Sprite2D" parent="arm"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0.635294, 0.556863, 1)
texture_filter = 1
texture = ExtResource("2_2dsj4")

[node name="r_elbow" type="Sprite2D" parent="arm"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 0, 1)
texture_filter = 1
position = Vector2(24, 12)
texture = ExtResource("2_2dsj4")

[node name="r_hand" type="Sprite2D" parent="arm"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0, 0, 1)
texture_filter = 1
position = Vector2(48, 0)
texture = ExtResource("2_2dsj4")
